created mongodb docker and tested with a mock entity